# ozone

./: AI_FIRST_README.md  FIRST_TEST_VALIDATION_REPORT.md  Modelfile  O3_OPTIMIZATION_PLAN.md  README.md  TECH_HANDOFF.md  dxdiag_output.txt  final_stress_test_256k.py  multi_gpu_test.sh  o3_ai_config.yaml  o3_optimizer.py  o3_optimizer_log.md  o3_optimizer_phase2_test.py  pyproject.toml  quickstart.py  requirements.txt  script.py  script_1.py  script_2.py  script_3.py  script_4.py  sustained_256k_agentic_test.py  tasks.json  test_o3_ai_optimizer.py  validation_report.json
.ai-first/: README.md
config/: models.yaml  o3_ai_config.yaml  o3_config.py
ctx_256k_locked/defaults/: qwen3-coder_30b.yaml
ctx_256k_locked/env/: env_256k_20251014_220423.json
docs/: MULTI_MODEL_CONTEXT_TEST_SUITE.md  REORGANIZATION.md  ai_first_fine_tuning_o3.md  ai_first_framework_summary.md  authentic_agentic_comparison_20251015_132607.md  authentic_agentic_comparison_20251015_132631.md  o3_optimizer_log.md  stress_test_analysis.md  test_stability_report.md
multi_gpu_optimization/defaults/: qwen2.5_0.5b.yaml
multi_gpu_optimization/logs/: qwen2.5_0.5b_20251017_212537.jsonl
multi_gpu_optimization/summaries/: qwen2.5_0.5b_20251017_212537.json
multi_model_context_tests/: ctx_64k_gemma3_tools_27b.py  ctx_64k_liquid_rag.py  phase1_validation_summary_20251015_091145.json  phase1_validation_summary_20251015_092038.json
o3_results/defaults/: qwen2.5_0.5b.yaml  qwen3-coder_30b.yaml
o3_results/env/: env_20251014_163720.json  env_20251014_171353.json  env_20251014_172029.json  env_20251014_172625.json  env_20251014_173030.json  env_20251014_173605.json  env_20251014_175533.json  env_20251014_195512.json  env_20251014_195554.json  env_20251014_213918.json
o3_results/logs/: qwen2.5_0.5b_20251017_200111.jsonl  qwen3-coder_30b_20251014_175105.jsonl
o3_results/summaries/: qwen2.5_0.5b_20251017_200111.json  qwen3-coder_30b_20251014_210137.json  qwen3-coder_30b_20251014_211513.json  qwen3-coder_30b_20251014_213433.json  qwen3-coder_30b_20251014_214146.json
official_production_test/: final_stress_test_256k_20251014_224153.json  stress_performance_data_20251014_224153.csv
real_test_results/defaults/: qwen3-coder_30b.yaml
real_test_results/env/: env_20251014_215840.json
real_test_results/summaries/: qwen3-coder_30b_20251014_220023.json
results/current/defaults/: liquid-rag_latest.yaml  swarm_optimization_liquid-rag_latest_20251015_190514_config.yaml
results/current/logs/: liquid-rag_latest_20251015_185646.jsonl
results/history/: authentic_agentic_comparison_20251015_132607.json  final_validation_report.py  launch.json  validation_report.json
scripts/: lora_finetune_codestral.py
src/o3/: __init__.py
src/o3/cli/: __init__.py  __main__.py  optimize.py
stress_test_orieg_gemma3_tools_27b_it_qat/: final_stress_test_256k_20251015_111007.json  final_stress_test_256k_20251015_132528.json  stress_test_report_20251015_111007.md  stress_test_report_20251015_113157.md
vscode_coder_optimization/defaults/: qwen2.5_0.5b.yaml
vscode_coder_optimization/logs/: qwen2.5_0.5b_20251017_211405.jsonl
vscode_coder_optimization/summaries/: qwen2.5_0.5b_20251017_211405.json
(+101 files in other folders)
